# ai-assisted-software-requirements-quality-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-checks.yml
configs/: synthetic_lab.yaml
data/: README.md
docs/: methodology.md  report_template.md  review_policy.md  synthetic_lab.md
matlab/: plot_requirements_metrics.m
scripts/: run_synthetic_requirements_lab.py
src/reqquality/: __init__.py  audit.py  config.py  conflicts.py  parsing.py  quality_checks.py  reporting.py  scoring.py  synthetic.py  traceability.py  visualization.py
tests/: test_audit.py  test_pipeline.py  test_quality_checks.py  test_scoring_traceability.py  test_synthetic.py
