[project]
name = "ai-assisted-software-requirements-quality-analyzer"
version = "0.1.0"
description = "Synthetic AI-assisted software requirements quality analyzer for ambiguity, completeness, conflict, risk, and testability review."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "PyYAML>=6.0,<7",
  "tabulate>=0.9,<1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
